--- a/app/views/layouts/shared/_nav.html.slim
+++ b/app/views/layouts/shared/_nav.html.slim
@@ -8,6 +8,8 @@ nav.navbar.fixed-top.bg-body-tertiary
       - if user_signed_in?
         = current_user.email
         |  |
+        = link_to "Новый пост", new_post_path
+        |  |  
         = link_to "Выйти", destroy_user_session_path, data: { turbo_method: "delete" }
       - else
         = link_to "Войти", new_user_session_path
