create model PostComment, realized comments-tree with gem ancestry, writing tests

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,5 +1,26 @@
-p style="color: green" = notice
+h1 = @post.title
+p = @post.body
 
-= link_to "Back to posts", posts_path
+h2 Комментарии
+#comments
+  = render partial: 'posts/comments/comment', collection: @comment_collection
 
-== render @post
+
+= simple_form_for PostComment.new, url: post_comments_path(post_id: @post.id), local: true do |f|
+  .form-inputs
+    = f.input :content, as: :text, input_html: { rows: 3 }
+  .form-actions
+    = f.button :submit, "Добавить комментарий"
+
+- if params[:reply_to].present?
+  - reply_comment = @post.comments.find(params[:reply_to])
+  
+  h3 Ответить на комментарий
+
+  = simple_form_for PostComment.new(post_id: @post.id, parent_id: reply_comment.id), url: post_comments_path(post_id: @post.id), local: true do |f|
+    = f.hidden_field :parent_id, value: reply_comment.id
+    .form-inputs
+      = f.input :content, as: :text, input_html: { rows: 3 }
+    .form-actions
+      = f.button :submit, "Ответить"
+
