--- a/app/views/posts/comments/_comment.html.slim
+++ b/app/views/posts/comments/_comment.html.slim
@@ -1,15 +1,15 @@
-hr
 div style='margin-left: #{comment.depth * 20}px;'
-  p = comment.creator.email
-  p = comment.content
-  p = time_ago_in_words(comment.created_at) + " назад"
+  .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-top: 20px;'
+    p = comment.creator.email
+    p = comment.content
+    p = time_ago_in_words(comment.created_at) + ' ago'
 
-- if user_signed_in?
-  - if params[:reply_to].to_i == comment.id
-    = link_to 'Ответить', post_path(@post)
-    = render partial: 'posts/comments/reply_form'
-  - else
-    = link_to 'Ответить', post_path(@post, reply_to: comment.id)
+    - if user_signed_in?
+      - if params[:reply_to].to_i == comment.id
+        = link_to 'Ответить', post_path(@post)
+        = render partial: 'posts/comments/reply_form'
+      - else
+        = link_to 'Ответить', post_path(@post, reply_to: comment.id)
 
 - if comment.children.any?
   = render partial: 'posts/comments/comment', collection: comment.children.order(:created_at), as: :comment
