--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,3 +1,4 @@
-h1 New post
-
-= render 'form'
+.container.content style='margin-top: 100px;'
+  h1 New post
+  .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
+    = render 'form'
