--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,19 +1,23 @@
-h2
-  | Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email,
-      required: true,
-      autofocus: true,
-      input_html: { autocomplete: "email" }
-    = f.input :password,
-      required: true,
-      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-      input_html: { autocomplete: "new-password" }
-    = f.input :password_confirmation,
-      required: true,
-      input_html: { autocomplete: "new-password" }
-  .form-actions
-    = f.button :submit, "Sign up"
-= render "devise/shared/links"
+.container.content style='margin-top: 100px;'
+  h1 Sign up
+  .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = f.error_notification
+      .form-inputs
+        = f.input :email,
+          required: true,
+          autofocus: true,
+          input_html: { autocomplete: "email" }
+    
+        = f.input :password,
+          required: true,
+          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+          input_html: { autocomplete: "new-password" }
+    
+        = f.input :password_confirmation,
+          required: true,
+          input_html: { autocomplete: "new-password" }
+    
+      .form-actions
+        = f.button :submit, "Sign up", class: 'btn btn-primary'
+    = render "devise/shared/links"
