--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,9 +1,9 @@
-.container.content style='margin-top: 100px;'
+.container.content style='margin-top: 100px; word-wrap: break-word;'
   - @posts.each do |post|
     .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
       h3
         =< link_to post.title, post, style: 'text-decoration: none; color: black;'
       p
-        =< simple_format(post.body)
+        =< simple_format(truncate(post.body, length: 200, omission: '...'))
       small
         =< post.creator.email
