--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,6 +1,12 @@
-.container.content style='margin-top: 100px;'
+.container.content style='margin-top: 100px; word-wrap: break-word;'
   .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
-    h3 = @post.title
+    ol.breadcrumb
+      li.breadcrumb-item
+        = link_to 'All posts', posts_path
+      li.breadcrumb-item.active
+        = @post.category.name
+    
+    h1 = @post.title
     p = simple_format(@post.body)
 
     = render 'posts/likes/like'
