--- a/app/views/posts/comments/_form.html.slim
+++ b/app/views/posts/comments/_form.html.slim
@@ -1,4 +1,4 @@
 div style='margin-top: 20px;'
   = simple_form_for PostComment.new, url: post_comments_path(@post), local: true do |f|
     = f.input :content, as: :text, label: false
-    = f.button :submit, 'Добавить комментарий', class: 'btn btn-primary'
+    = f.button :submit, 'Add comment', class: 'btn btn-primary'
