added translations to locale file

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -6,4 +6,4 @@
   = f.association :category
   = f.input :body
 
-  = f.button :submit, 'Добавить пост', class: 'btn btn-primary'
+  = f.button :submit, t('simple_form.buttons.new_post'), class: 'btn btn-primary'
