--- a/app/views/posts/comments/_reply_form.slim
+++ b/app/views/posts/comments/_reply_form.slim
@@ -4,4 +4,4 @@
 p = simple_form_for(children_comment, url: post_comments_path(@post), local: true) do |f|
     = f.hidden_field :parent_id, value: parent_comment.id
     = f.input :content, as: :text, label: false
-    = f.button :submit, 'Отправить', class: 'btn btn-primary'
+    = f.button :submit, t('simple_form.buttons.reply_comment'), class: 'btn btn-primary'
