--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -2,7 +2,7 @@
   .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
     ol.breadcrumb
       li.breadcrumb-item
-        = link_to 'All posts', posts_path
+        = link_to t('all_posts'), posts_path
       li.breadcrumb-item.active
         = @post.category.name
     
