--- a/app/views/posts/comments/_comment.html.slim
+++ b/app/views/posts/comments/_comment.html.slim
@@ -1,16 +1,16 @@
 .card.mt-3 style="margin-left: #{comment.depth * 20}px;"
   .card-header.d-flex.justify-content-between
     = comment.user.email
-    small.text-muted = "#{time_ago_in_words(comment.created_at)} #{t('comments.created_at')}"
+    small.text-muted = "#{time_ago_in_words(comment.created_at)} #{t('.created_at')}"
   .card-body
     p = comment.content
 
     - if user_signed_in?
       - if params[:reply_to].to_i == comment.id
-        = link_to t('reply'), post_path(@post), class: 'd-block'
+        = link_to t('.reply'), post_path(@post), class: 'd-block'
         = render partial: 'posts/comments/reply_form'
       - else
-        = link_to t('reply'), post_path(@post, reply_to: comment.id), class: 'd-block'
+        = link_to t('.reply'), post_path(@post, reply_to: comment.id), class: 'd-block'
 
 - if comment.children.any?
   = render partial: 'posts/comments/comment', collection: comment.children.order(:created_at), as: :comment
