--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,4 +1,4 @@
 .container.content style='margin-top: 100px;'
-  h1 t('new_post')
+  h1 = t('.new')
   .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
     = render 'form'
