--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,5 @@
 .container.content style='margin-top: 100px;'
-  h1 Sign up
+  h1 = t('shared._nav.sign_up')
   .border style='border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 20px;'
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = f.error_notification
@@ -11,7 +11,7 @@
     
         = f.input :password,
           required: true,
-          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+          hint: ("#{@minimum_password_length} #{t('simple_form.hints.password')}" if @minimum_password_length),
           input_html: { autocomplete: "new-password" }
     
         = f.input :password_confirmation,
@@ -19,5 +19,4 @@
           input_html: { autocomplete: "new-password" }
     
       .form-actions
-        = f.button :submit, "Sign up", class: 'btn btn-primary'
-    = render "devise/shared/links"
+        = f.button :submit, t('simple_form.buttons.sign_up'), class: 'btn btn-primary'
